[package]
name = "trackerio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
axum-aws-lambda = "0.5.1"
axum-extra = { version = "0.8.0", features = ["cookie"] }
dotenvy = "0.15.7"
lambda-web = { version = "0.2.1", features = ["hyper"] }
lazy_static = "1.4.0"
openssl = { version = "0.10.61", features = ["vendored"] }
parking_lot = "0.12.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", default-features = false, features = ["cors"] }

